--- a/force-app/main/default/classes/SlackOpportunityPublisherv3Test.cls
+++ b/force-app/main/default/classes/SlackOpportunityPublisherv3Test.cls
@@ -1,14 +1,14 @@
-// @isTest	
-// private class SlackOpportunityPublisherv3Test {
-// static testMethod void testPostToSlack() {
-// SlackOpportunityPublisherv3.Oppty opt = new SlackOpportunityPublisherv3.Oppty();
-// opt.opptyName = 'Unit Test Opt';
-// opt.opptyProduct = 'Unit Test Stage';
+@isTest	
+private class SlackOpportunityPublisherv3Test {
+static testMethod void testPostToSlack() {
+SlackOpportunityPublisherv3.Oppty opt = new SlackOpportunityPublisherv3.Oppty();
+opt.opptyName = 'Unit Test Opt';
+opt.opptyProduct = 'Unit Test Stage';
 
-// List<SlackOpportunityPublisherv3.oppty> lis = new List<SlackOpportunityPublisherv3.oppty>();
-// lis.add(opt);
-// SlackOpportunityPublisherv3.postToSlack(lis);
+List<SlackOpportunityPublisherv3.oppty> lis = new List<SlackOpportunityPublisherv3.oppty>();
+lis.add(opt);
+SlackOpportunityPublisherv3.postToSlack(lis);
 
-// System.assertEquals(lis, lis); // Can't really test this, just put something that is true
-// }
-// }
+System.assertEquals(lis, lis); // Can't really test this, just put something that is true
+}
+}
